Fixed overflow issue

--- a/src/components/FeaturedSection/FeaturedSection.scss
+++ b/src/components/FeaturedSection/FeaturedSection.scss
@@ -1,5 +1,5 @@
 .featured {
-  width: 100vw;
+  width: 100%;
   height: auto;
   padding: 4rem 0;
   background-color: var(--clr-accent-light);
