--- a/src/components/WorkSection/WorkSection.scss
+++ b/src/components/WorkSection/WorkSection.scss
@@ -1,7 +1,7 @@
 .work {
   // background-color: var(--clr-lighter);
   padding: 4rem 0;
-  width: 100vw;
+  width: 100%;
 
   &__wrapper {
     display: flex;
