--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: calc(100vh - var(--navbar-height) - var(--footer-height));
+  min-height: calc(100vh - var(--navbar-height));
 
   &__wrapper {
     display: flex;
@@ -55,5 +55,6 @@
   &__description {
     font-size: 1.2rem;
     margin-bottom: 1rem;
+    text-align: center;
   }
 }
